# desbordante-core

./: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/algorithms/: CMakeLists.txt  algo_factory.cpp
src/core/algorithms/algebraic_constraints/: CMakeLists.txt
src/core/algorithms/association_rules/: CMakeLists.txt
src/core/algorithms/cfd/: CMakeLists.txt  cfd_discovery.h  fd_first_algorithm.h
src/core/algorithms/cfd/cfd_verifier/: cfd_stats_calculator.h
src/core/algorithms/cfd/util/: cfd_output_util.h  partition_tidlist_util.h  partition_util.h  tidlist_util.h
src/core/algorithms/dc/: CMakeLists.txt
src/core/algorithms/dd/: CMakeLists.txt
src/core/algorithms/fd/: CMakeLists.txt
src/core/algorithms/gfd/: CMakeLists.txt
src/core/algorithms/ind/: CMakeLists.txt
src/core/algorithms/md/: CMakeLists.txt
src/core/algorithms/metric/: CMakeLists.txt
src/core/algorithms/nar/: CMakeLists.txt
src/core/algorithms/nd/: CMakeLists.txt
src/core/algorithms/od/: CMakeLists.txt
src/core/algorithms/pipelines/: CMakeLists.txt
src/core/algorithms/statistics/: CMakeLists.txt
src/core/algorithms/ucc/: CMakeLists.txt
src/core/config/: CMakeLists.txt
